updating index.html for real this time

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>Calculatron</title>
         <link rel="stylesheet" href="resources/style.css" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Faster+One" rel="stylesheet">
     </head>
